# DiffIE

./: .gitignore  load_data.sh  pyproject.toml
config/: SOTA.yaml  imojie_64step_best.yaml  imojie_8step_best.yaml  pretrain_imojie_mdlm.yaml  training.yaml  training_detie.yaml  training_discrete.yaml  training_iped.yaml  training_mdlm.yaml  training_span.yaml
src/diffopenie/: data.py  dataset.py  metrics.py  utils.py
src/diffopenie/data/: __init__.py  collator.py  dataset.py  imojie.py  lsoie.py  triplet_utils.py
src/diffopenie/diffusion/: denoiser.py  discrete.py  mdlm.py  plot_schedule.py  scheduler.py  schedules.py
src/diffopenie/evaluation/: app.py  carb_eval.py  carb_metrics.py  debug_diffusion.py  generate_cli.py  llm_extract.py
src/diffopenie/models/: base_model.py  diffusion_model.py  encoder.py  label_mapper.py
src/diffopenie/models/detie/: __init__.py  bipartite_matching.py  configs.py  detie_model.py
src/diffopenie/models/diffusion/: __init__.py  denoiser.py  scheduler.py
src/diffopenie/models/discrete/: denoiser.py  discrete_model.py  discrete_trainer.py  extractors.py
src/diffopenie/models/sequence/: __init__.py  denoiser.py  diffusion_model.py  sequence_model.py
src/diffopenie/models/span/: __init__.py  configs.py  denoiser.py  diffusionNER.py  label_mapper.py  slot_denoiser.py  span_model.py
src/diffopenie/training/: __init__.py  base_trainer.py  detie_trainer.py  logger.py  metrics.py  sequence_trainer.py  span_trainer.py  span_trainer_simple.py  train_example.py  trainer.py
tests/: test_carb_metrics.py  test_label_mapper.py  test_span_handling.py
